rstsr-kml-ffi/header/kblas.h

typedef BLASLONG BLASINT;
typedef int BLASINT;
/* matrix saved in rows or cols */
typedef enum CBLAS_ORDER {
    CblasRowMajor = 101,
    CblasColMajor = 102
} CBLAS_ORDER;
/* matrix transpose or conjugate transpose */
typedef enum CBLAS_TRANSPOSE {
    CblasNoTrans = 111,
    CblasTrans = 112,
    CblasConjTrans = 113, // conjugate transpose
    CblasConjNoTrans = 114
} CBLAS_TRANSPOSE;
/* matrix upper or lower */
typedef enum CBLAS_UPLO {
    CblasUpper = 121,
    CblasLower = 122
} CBLAS_UPLO;
/* matrix diagonal is unit or no unit */
typedef enum CBLAS_DIAG {
    CblasNonUnit = 131,
    CblasUnit = 132
} CBLAS_DIAG;
/* matrix position is left or right */
typedef enum CBLAS_SIDE {
    CblasLeft = 141,
    CblasRight = 142
} CBLAS_SIDE;
void cblas_somatcopy(const enum CBLAS_ORDER cblasOrder, const enum CBLAS_TRANSPOSE cblasTrans, const BLASINT crows,
    const BLASINT ccols, const float calpha, const float *a, const BLASINT clda, float *b, const BLASINT cldb);
void cblas_domatcopy(const enum CBLAS_ORDER cblasOrder, const enum CBLAS_TRANSPOSE cblasTrans, const BLASINT crows,
    const BLASINT ccols, const double calpha, const double *a, const BLASINT clda, double *b, const BLASINT cldb);
void cblas_comatcopy(const enum CBLAS_ORDER cblasOrder, const enum CBLAS_TRANSPOSE cblasTrans, const BLASINT crows,
    const BLASINT ccols, const float *calpha, const float *a, const BLASINT clda, float *b, const BLASINT cldb);
void cblas_zomatcopy(const enum CBLAS_ORDER cblasOrder, const enum CBLAS_TRANSPOSE cblasTrans, const BLASINT crows,
    const BLASINT ccols, const double *calpha, const double *a, const BLASINT clda, double *b, const BLASINT cldb);
void cblas_simatcopy(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE trans, const BLASINT rows,
    const BLASINT cols, const float alpha, float *AB, const BLASINT lda, const BLASINT ldb);
void cblas_dimatcopy(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE trans, const BLASINT rows,
    const BLASINT cols, const double alpha, double *AB, const BLASINT lda, const BLASINT ldb);
void cblas_cimatcopy(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE trans, const BLASINT rows,
    const BLASINT cols, const float *alpha, float *AB, const BLASINT lda, const BLASINT ldb);
void cblas_zimatcopy(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE trans, const BLASINT rows,
    const BLASINT cols, const double *alpha, double *AB, const BLASINT lda, const BLASINT ldb);
void cblas_dtrmm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo,
    const enum CBLAS_TRANSPOSE TransA, const enum CBLAS_DIAG Diag, const BLASINT M, const BLASINT N, const double alpha,
    const double *A, const BLASINT lda, double *B, const BLASINT ldb);
void cblas_ctrmm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo,
    const enum CBLAS_TRANSPOSE TransA, const enum CBLAS_DIAG Diag, const BLASINT M, const BLASINT N, const void *alpha,
    const void *A, const BLASINT lda, void *B, const BLASINT ldb);
void cblas_ztrmm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo,
    const enum CBLAS_TRANSPOSE TransA, const enum CBLAS_DIAG Diag, const BLASINT M, const BLASINT N, const void *alpha,
    const void *A, const BLASINT lda, void *B, const BLASINT ldb);
void cblas_strsm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo,
    const enum CBLAS_TRANSPOSE TransA, const enum CBLAS_DIAG Diag, const BLASINT M, const BLASINT N, const float alpha,
    const float *A, const BLASINT lda, float *B, const BLASINT ldb);
void cblas_dtrsm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo,
    const enum CBLAS_TRANSPOSE TransA, const enum CBLAS_DIAG Diag, const BLASINT M, const BLASINT N, const double alpha,
    const double *A, const BLASINT lda, double *B, const BLASINT ldb);
void cblas_ctrsm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo,
    const enum CBLAS_TRANSPOSE TransA, const enum CBLAS_DIAG Diag, const BLASINT M, const BLASINT N, const void *alpha,
    const void *A, const BLASINT lda, void *B, const BLASINT ldb);
void cblas_ztrsm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo,
    const enum CBLAS_TRANSPOSE TransA, const enum CBLAS_DIAG Diag, const BLASINT M, const BLASINT N, const void *alpha,
    const void *A, const BLASINT lda, void *B, const BLASINT ldb);
void cblas_chemm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo, const BLASINT M,
    const BLASINT N, const void *alpha, const void *A, const BLASINT lda, const void *B, const BLASINT ldb,
    const void *beta, void *C, const BLASINT ldc);
void cblas_zhemm(const enum CBLAS_ORDER Order, const enum CBLAS_SIDE Side, const enum CBLAS_UPLO Uplo, const BLASINT M,
    const BLASINT N, const void *alpha, const void *A, const BLASINT lda, const void *B, const BLASINT ldb,
    const void *beta, void *C, const BLASINT ldc);
void cblas_cherk(const enum CBLAS_ORDER Order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE Trans,
    const BLASINT N, const BLASINT K, const float alpha, const void *A, const BLASINT lda, const float beta, void *C,
    const BLASINT ldc);
void cblas_zherk(const enum CBLAS_ORDER Order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE Trans,
    const BLASINT N, const BLASINT K, const double alpha, const void *A, const BLASINT lda, const double beta, void *C,
    const BLASINT ldc);
void cblas_cher2k(const enum CBLAS_ORDER Order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE Trans,
    const BLASINT N, const BLASINT K, const void *alpha, const void *A, const BLASINT lda, const void *B,
    const BLASINT ldb, const float beta, void *C, const BLASINT ldc);
void cblas_zher2k(const enum CBLAS_ORDER Order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE Trans,
    const BLASINT N, const BLASINT K, const void *alpha, const void *A, const BLASINT lda, const void *B,
    const BLASINT ldb, const double beta, void *C, const BLASINT ldc);
void cblas_xerbla(BLASINT p, const char *rout, const char *form, ...);
/* ** BLAS extensions ** */

void cblas_saxpby(const BLASINT n, const float alpha, const float *x, const BLASINT incX, const float beta, float *y,
    const BLASINT incY);
void cblas_daxpby(const BLASINT n, const double alpha, const double *x, const BLASINT incX, const double beta,
    double *y, const BLASINT incY);
void cblas_caxpby(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, const void *beta, void *y,
    const BLASINT incY);
void cblas_zaxpby(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, const void *beta, void *y,
    const BLASINT incY);