rstsr-openblas-ffi/src/cblas.rs

    pub fn cblas_dtrmm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: f64,
        A: *const f64,
        lda: blas_int,
        B: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_ctrmm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *mut c_void,
        ldb: blas_int,
    );
    pub fn cblas_ztrmm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *mut c_void,
        ldb: blas_int,
    );
    pub fn cblas_strsm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: f32,
        A: *const f32,
        lda: blas_int,
        B: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_dtrsm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: f64,
        A: *const f64,
        lda: blas_int,
        B: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_ctrsm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *mut c_void,
        ldb: blas_int,
    );
    pub fn cblas_ztrsm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *mut c_void,
        ldb: blas_int,
    );
    pub fn cblas_chemm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *const c_void,
        ldb: blas_int,
        beta: *const c_void,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_zhemm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *const c_void,
        ldb: blas_int,
        beta: *const c_void,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_cherk(
        Order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: blas_int,
        K: blas_int,
        alpha: f32,
        A: *const c_void,
        lda: blas_int,
        beta: f32,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_zherk(
        Order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: blas_int,
        K: blas_int,
        alpha: f64,
        A: *const c_void,
        lda: blas_int,
        beta: f64,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_cher2k(
        Order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: blas_int,
        K: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *const c_void,
        ldb: blas_int,
        beta: f32,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_zher2k(
        Order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: blas_int,
        K: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *const c_void,
        ldb: blas_int,
        beta: f64,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_xerbla(p: blas_int, rout: *const c_char, form: *const c_char, ...);
    #[doc = " BLAS extensions"]
    pub fn cblas_saxpby(
        n: blas_int,
        alpha: f32,
        x: *const f32,
        incx: blas_int,
        beta: f32,
        y: *mut f32,
        incy: blas_int,
    );
    pub fn cblas_daxpby(
        n: blas_int,
        alpha: f64,
        x: *const f64,
        incx: blas_int,
        beta: f64,
        y: *mut f64,
        incy: blas_int,
    );
    pub fn cblas_caxpby(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incx: blas_int,
        beta: *const c_void,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_zaxpby(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incx: blas_int,
        beta: *const c_void,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_somatcopy(
        CORDER: CBLAS_ORDER,
        CTRANS: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: f32,
        a: *const f32,
        clda: blas_int,
        b: *mut f32,
        cldb: blas_int,
    );
    pub fn cblas_domatcopy(
        CORDER: CBLAS_ORDER,
        CTRANS: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: f64,
        a: *const f64,
        clda: blas_int,
        b: *mut f64,
        cldb: blas_int,
    );
    pub fn cblas_comatcopy(
        CORDER: CBLAS_ORDER,
        CTRANS: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: *const f32,
        a: *const f32,
        clda: blas_int,
        b: *mut f32,
        cldb: blas_int,
    );
    pub fn cblas_zomatcopy(
        CORDER: CBLAS_ORDER,
        CTRANS: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: *const f64,
        a: *const f64,
        clda: blas_int,
        b: *mut f64,
        cldb: blas_int,
    );
    pub fn cblas_simatcopy(
        CORDER: CBLAS_ORDER,
        CTRANS: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: f32,
        a: *mut f32,
        clda: blas_int,
        cldb: blas_int,
    );
    pub fn cblas_dimatcopy(
        CORDER: CBLAS_ORDER,
        CTRANS: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: f64,
        a: *mut f64,
        clda: blas_int,
        cldb: blas_int,
    );
    pub fn cblas_cimatcopy(
        CORDER: CBLAS_ORDER,
        CTRANS: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: *const f32,
        a: *mut f32,
        clda: blas_int,
        cldb: blas_int,
    );
    pub fn cblas_zimatcopy(
        CORDER: CBLAS_ORDER,
        CTRANS: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: *const f64,
        a: *mut f64,
        clda: blas_int,
        cldb: blas_int,
    );
    pub fn cblas_sgeadd(
        CORDER: CBLAS_ORDER,
        crows: blas_int,
        ccols: blas_int,
        calpha: f32,
        a: *const f32,
        clda: blas_int,
        cbeta: f32,
        c: *mut f32,
        cldc: blas_int,
    );
    pub fn cblas_dgeadd(
        CORDER: CBLAS_ORDER,
        crows: blas_int,
        ccols: blas_int,
        calpha: f64,
        a: *const f64,
        clda: blas_int,
        cbeta: f64,
        c: *mut f64,
        cldc: blas_int,
    );
    pub fn cblas_cgeadd(
        CORDER: CBLAS_ORDER,
        crows: blas_int,
        ccols: blas_int,
        calpha: *const f32,
        a: *const f32,
        clda: blas_int,
        cbeta: *const f32,
        c: *mut f32,
        cldc: blas_int,
    );
    pub fn cblas_zgeadd(
        CORDER: CBLAS_ORDER,
        crows: blas_int,
        ccols: blas_int,
        calpha: *const f64,
        a: *const f64,
        clda: blas_int,
        cbeta: *const f64,
        c: *mut f64,
        cldc: blas_int,
    );
    pub fn cblas_sgemm_batch(
        Order: CBLAS_ORDER,
        TransA_array: *const CBLAS_TRANSPOSE,
        TransB_array: *const CBLAS_TRANSPOSE,
        M_array: *const blas_int,
        N_array: *const blas_int,
        K_array: *const blas_int,
        alpha_array: *const f32,
        A_array: *mut *const f32,
        lda_array: *const blas_int,
        B_array: *mut *const f32,
        ldb_array: *const blas_int,
        beta_array: *const f32,
        C_array: *mut *mut f32,
        ldc_array: *const blas_int,
        group_count: blas_int,
        group_size: *const blas_int,
    );
    pub fn cblas_dgemm_batch(
        Order: CBLAS_ORDER,
        TransA_array: *const CBLAS_TRANSPOSE,
        TransB_array: *const CBLAS_TRANSPOSE,
        M_array: *const blas_int,
        N_array: *const blas_int,
        K_array: *const blas_int,
        alpha_array: *const f64,
        A_array: *mut *const f64,
        lda_array: *const blas_int,
        B_array: *mut *const f64,
        ldb_array: *const blas_int,
        beta_array: *const f64,
        C_array: *mut *mut f64,
        ldc_array: *const blas_int,
        group_count: blas_int,
        group_size: *const blas_int,
    );
    pub fn cblas_cgemm_batch(
        Order: CBLAS_ORDER,
        TransA_array: *const CBLAS_TRANSPOSE,
        TransB_array: *const CBLAS_TRANSPOSE,
        M_array: *const blas_int,
        N_array: *const blas_int,
        K_array: *const blas_int,
        alpha_array: *const c_void,
        A_array: *mut *const c_void,
        lda_array: *const blas_int,
        B_array: *mut *const c_void,
        ldb_array: *const blas_int,
        beta_array: *const c_void,
        C_array: *mut *mut c_void,
        ldc_array: *const blas_int,
        group_count: blas_int,
        group_size: *const blas_int,
    );
    pub fn cblas_zgemm_batch(
        Order: CBLAS_ORDER,
        TransA_array: *const CBLAS_TRANSPOSE,
        TransB_array: *const CBLAS_TRANSPOSE,
        M_array: *const blas_int,
        N_array: *const blas_int,
        K_array: *const blas_int,
        alpha_array: *const c_void,
        A_array: *mut *const c_void,
        lda_array: *const blas_int,
        B_array: *mut *const c_void,
        ldb_array: *const blas_int,
        beta_array: *const c_void,
        C_array: *mut *mut c_void,
        ldc_array: *const blas_int,
        group_count: blas_int,
        group_size: *const blas_int,
    );
    #[doc = " BFLOAT16 and INT8 extensions"]
    pub fn cblas_sbstobf16(
        n: blas_int,
        in_: *const f32,
        incin: blas_int,
        out: *mut bfloat16,
        incout: blas_int,
    );
    pub fn cblas_sbdtobf16(
        n: blas_int,
        in_: *const f64,
        incin: blas_int,
        out: *mut bfloat16,
        incout: blas_int,
    );
    pub fn cblas_sbf16tos(
        n: blas_int,
        in_: *const bfloat16,
        incin: blas_int,
        out: *mut f32,
        incout: blas_int,
    );
    pub fn cblas_dbf16tod(
        n: blas_int,
        in_: *const bfloat16,
        incin: blas_int,
        out: *mut f64,
        incout: blas_int,
    );
    pub fn cblas_sbdot(
        n: blas_int,
        x: *const bfloat16,
        incx: blas_int,
        y: *const bfloat16,
        incy: blas_int,
    ) -> f32;
    pub fn cblas_sbgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *const bfloat16,
        lda: blas_int,
        x: *const bfloat16,
        incx: blas_int,
        beta: f32,
        y: *mut f32,
        incy: blas_int,
    );
